# Solana-Job-Board

./: 1.json  Anchor.toml
app/: package.json  pnpm-lock.yaml  solana_job_board.json  tailwind.config.js
app/components/: JobPostCard.tsx
app/contexts/: WalletContextProvider.tsx
app/effects/: useAnchor.ts
app/models/: JobPost.ts
app/pages/: _app.tsx  index.tsx
app/pages/jobpost/: add.tsx
programs/solana-job-board/: Cargo.toml
programs/solana-job-board/src/: lib.rs
tests/: solana-job-board.ts
